pom stuff: no more sonar